fix (style): Align TOC on the left together with the page content #132
- delete left margins from list items
- assign left margins to list element <ul> instead
- only the first list in the TOC is aligned without any margin, the
nested lists will indent with margin: 2em

Fixes #132

--- a/app/scss/_toc.scss
+++ b/app/scss/_toc.scss
@@ -17,15 +17,19 @@
   ul {
     list-style: none;
     padding-left: 0;
-  }
-  li {
     margin-left: 2em;
   }
+  
+  > ul {
+    margin-left: 0;
+  }
+
   a {
     display: block;
     margin-bottom: 1em;
   }
 }
+
 
 #toc,
 #volume {
